--- a/nasanovich-app/my-app/src/App.css
+++ b/nasanovich-app/my-app/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  background: radial-gradient(100% 215.42% at 0% 0%, rgba(91, 72, 58, 1) 0%, rgba(38, 36, 37, 1) 100%), rgba(33, 31, 32, 1);
+height: 100vh;
+color: red;
 }
 
 .App-logo {
