feat: add movie API

--- a/nasanovich-app/my-app/src/App.css
+++ b/nasanovich-app/my-app/src/App.css
@@ -5,6 +5,21 @@ height: 100vh;
 color: red;
 }
 
+/* .main { */
+  /* padding: 10px 50px; */
+/* } */
+
+
+
+
+
+
+
+
+
+
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
