--- a/nasanovich-app/my-app/src/components/movielist/MovieCard.module.css
+++ b/nasanovich-app/my-app/src/components/movielist/MovieCard.module.css
@@ -9,3 +9,14 @@
   border-radius: 3%;
   
 }
+
+.item:hover {
+  cursor: pointer;
+  background: radial-gradient(100% 215.42% at 0% 0%, rgba(91, 72, 58, 1) 0%, rgba(38, 36, 37, 1) 50%), rgba(33, 31, 32, 1);
+}
+
+.button:hover {
+  background: teal;
+  cursor: pointer;
+  color: white;
+}
