--- a/nasanovich-app/my-app/src/components/movielist/MovieList.module.css
+++ b/nasanovich-app/my-app/src/components/movielist/MovieList.module.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
- 
   width: 100%;
   gap: 5px;
 }
@@ -21,4 +20,9 @@
   display: flex;
   justify-content: space-between;
   color: white;
+}
+
+.queryString {
+  display: flex;
+  justify-content: center;
 }
