fix: clear code

--- a/nasanovich-app/my-app/src/components/navbar/Navbar.module.css
+++ b/nasanovich-app/my-app/src/components/navbar/Navbar.module.css
@@ -2,11 +2,14 @@
 .wrapp {
   display: flex;
   justify-content: space-between;
-  /* background-color: brown; */
   align-items: center;
 }
 
 .text {
   color: black;
   font-weight: bold;
+}
+
+.login {
+  color: red
 }
