--- a/nasanovich-app/my-app/src/App.css
+++ b/nasanovich-app/my-app/src/App.css
@@ -1,56 +1,11 @@
 .App {
   text-align: center;
-  background: radial-gradient(100% 215.42% at 0% 0%, rgba(91, 72, 58, 1) 0%, rgba(38, 36, 37, 1) 100%), rgba(33, 31, 32, 1);
-height: 100vh;
-color: red;
-}
-
-/* .main { */
-  /* padding: 10px 50px; */
-/* } */
-
-
-
-
-
-
-
-
-
-
-
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  background: radial-gradient(
+      100% 215.42% at 0% 0%,
+      rgba(91, 72, 58, 1) 0%,
+      rgba(38, 36, 37, 1) 100%
+    ),
+    rgba(33, 31, 32, 1);
+  height: 100vh;
+  color: red;
 }
